ws_moveit/src/Diana7/include/DianaAPI.h

DIANA_API int moveJoint(/*IN*/ joint_direction_e d, /*IN*/ int i, /*IN*/ double v, /*IN*/ double a,
                        /*IN*/ const char *strIpAddress = "");
DIANA_API int moveJToTarget(/*IN[7]*/ double *joints, /*IN*/ double v, /*IN*/ double a,
                            /*IN*/ const char *strIpAddress = "");
DIANA_API int moveJToPose(/*IN[6]*/ double *pose, /*IN*/ double v, /*IN*/ double a,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
#define moveJ moveJToTarget
#define moveL moveLToPose
DIANA_API int moveLToTarget(/*IN[7]*/ double *joints, /*IN*/ double v, /*IN*/ double a,
                            /*IN*/ const char *strIpAddress = "");
DIANA_API int moveLToPose(/*IN[6]*/ double *pose, /*IN*/ double v, /*IN*/ double a,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int speedJ(/*IN[7]*/ double *speed, /*IN*/ double a, /*option*/ double t,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int speedL(/*IN[6]*/ double *speed, /*IN[2]*/ double *a, /*option*/ double t,
                     /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int freeDriving(bool enable, /*IN*/ const char *strIpAddress = "");
DIANA_API int stop(const char *strIpAddress = "");
DIANA_API int forward(/*IN[7]*/ double *joints, /*OUT[6]*/ double *pose, /*IN[6]*/ double *active_tcp = nullptr,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int inverse(/*IN[6]*/ double *pose, /*OUT[7]*/ double *joints, /*IN[6]*/ double *active_tcp = nullptr,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointPos(/*OUT[7]*/ double *joints, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointAngularVel(/*OUT[7]*/ double *vels, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointCurrent(/*OUT[7]*/ double *joints, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointTorque(/*OUT[7]*/ double *torques, /*IN*/ const char *strIpAddress = "");
DIANA_API int getTcpPos(/*OUT[6]*/ double *pose, /*IN*/ const char *strIpAddress = "");
DIANA_API double getTcpExternalForce(const char *strIpAddress = "");
DIANA_API int releaseBrake(const char *strIpAddress = "");  // powerOn
DIANA_API int holdBrake(const char *strIpAddress = "");  // powerOff
typedef enum _Mode {
    T_MODE_INVALID = -1,
    T_MODE_POSITION = 0,
    T_MODE_JOINT_IMPEDANCE,
    T_MODE_CART_IMPEDANCE,
} mode_e;
DIANA_API int changeControlMode(
    mode_e m,
    /*IN*/ const char *strIpAddress = "");  // ChangeMode:Position, JointImpedance, CartImpedance
/*************************************** version 0.2 ***************************************/

DIANA_API unsigned short getLibraryVersion();
DIANA_API const char *formatError(int e, /*IN*/ const char *strIpAddress = "");
DIANA_API int getLastError(const char *strIpAddress = "");
DIANA_API int setLastError(int e, /*IN*/ const char *strIpAddress = "");
// setDefaultActiveTcp:该函数将会改变moveTCP，rotationTCP，moveJToPose，moveLToPose，speedJ，speedL，forward，inverse，getTcpPos，getTcpExternalForce的默认行为。
DIANA_API int setDefaultActiveTcp(/*IN[16]*/ double *default_tcp, /*IN*/ const char *strIpAddress = "");
DIANA_API int getLinkState(const char *strIpAddress = "");
/*************************************** version 0.3 ***************************************/

DIANA_API int getTcpForce(/*OUT[6]*/ double *forces, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointForce(/*OUT[7]*/ double *forces, /*IN*/ const char *strIpAddress = "");